@@ -9,6 +9,7 @@ version = 0.22
 [@Author::Plicease]
 release_tests = 1
 travis_status = 1
+installer     = MakeMaker
 
 [RemovePrereqs]
 
