@@ -1,8 +1,0 @@
-package My::ModuleBuild;
-
-use strict;
-use warnings;
-use 5.008001;
-use base qw( Module::Build );
-
-1;
